--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,12 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&character
 spring.datasource.username=root
 spring.datasource.password=911106
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#REDIS
+spring.redis.database=0
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.pool.max-idle=8
+spring.redis.pool.min-idle=0
+spring.redis.pool.max-active=8
+spring.redis.pool.max-wait=-1
